--- a/views/new-list.pug
+++ b/views/new-list.pug
@@ -9,7 +9,8 @@ block main
         input(type="text"
               id="todoListTitle"
               name="todoListTitle"
-              placeholder="List Title")
+              placeholder="List Title"
+              value=todoListTitle)
       fieldset.action 
         input(type="submit" value="Save")
         a(href="/lists") Cancel 
